fix: adjust default link color to meet contrast accessibility requirements

--- a/components/menus/menu.scss
+++ b/components/menus/menu.scss
@@ -83,6 +83,7 @@
 
     &:hover {
       color: $light-blue;
+      text-decoration: none !important;
     }
 
     &--margin {
